[package]
name = "public-nouns-puller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = "2.0.7"
eyre = "0.6.8"
base64 = "0.21.2"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.96"

[build-dependencies]
dotenv = "0.15.0"
ethers = "2.0.7"
eyre = "0.6.8"
tokio = { version = "1", features = ["full"] }